--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <!-- Numeric Textfield -->
-       <form action="#">
-       <div class="mdl-textfield mdl-js-textfield">
-        <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="numbervalue">
-        <label class="mdl-textfield__label" for="numbervalue">Input a negative or positive number</label>
-       <span class="mdl-textfield__error">Input is not a number!</span>
-       </div>
-   </form>
+        <h6>How old are you?</h6>
+         <!--Radio Buttons-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age">
+        <input checked class="mdl-radio__button" id="age" name="age" type="radio"
+   value="age">
+        <span class="mdl-radio__label">17 years old</span>
+        </label>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age">
+        <input class="mdl-radio__button" id="age" name="age" type="radio" value="age">
+        <span class="mdl-radio__label">13 years old</span>
+        </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age">
+        <input checked class="mdl-radio__button" id="age" name="age" type="radio"
+   value="age">
+        <span class="mdl-radio__label">5 years old</span>
         <!-- Raised button with ripple -->
-        <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="myButtonClicked()">
-          Show Value
-        </button>
+
         <!-- basic text -->
         <p></p>
         <div id="answer"></div>
