--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
    value="age">
         <span class="mdl-radio__label">5 years old</span>
         <!-- Raised button with ripple -->
-
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" onclick= "myButtonClicked()">
+              Button
+            </button>
         <!-- basic text -->
         <p></p>
         <div id="answer"></div>
