--- a/index.html
+++ b/index.html
@@ -34,22 +34,23 @@
         <h6>How old are you?</h6>
          <!--Radio Buttons-->
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age17">
-        <input checked class="mdl-radio__button" id="age17" name="age" type="radio"
-   value="age17">
-        <span class="mdl-radio__label">17 years old and older </span>
+          <input checked class="mdl-radio__button" id="age17" name="age" type="radio" value="age17">
+          <span class="mdl-radio__label">17 years old and older </span>
         </label>
+        <br>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age13">
-        <input class="mdl-radio__button" id="age13" name="age" type="radio" value="age13">
-        <span class="mdl-radio__label">13 years old</span>
+          <input class="mdl-radio__button" id="age13" name="age" type="radio" value="age13">
+          <span class="mdl-radio__label">13 years old</span>
         </label>
-          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age5">
-        <input checked class="mdl-radio__button" id="age5" name="age" type="radio"
-   value="age5">
-        <span class="mdl-radio__label">5 years old</span>
-          </label>
+        <br>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="age5">
+          <input checked class="mdl-radio__button" id="age5" name="age" type="radio" value="age5">
+          <span class="mdl-radio__label">5 years old</span>
+        </label>
+        <br>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="0">
-        <input class="mdl-radio__button" id="0" name="age" type="radio" value="0">
-        <span class="mdl-radio__label">Younger then 5</span>
+          <input class="mdl-radio__button" id="0" name="age" type="radio" value="0" checked = true>
+          <span class="mdl-radio__label">Younger then 5</span>
         </label>
           <p></p>
           <br>
