--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Integer identificator, with JavaScript">
+    <meta name="description" content="Age identificator, with JavaScript">
     <meta name="keywords" content="mths, ics2o">
     <meta name="author" content="Ava Venturino">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Try to guess the number!</title>
+    <title>Age identificator</title>
     <link rel="canonical" href="https://AvaVenturino.github.io/ICS20-Unit-5-03-JS/" />
     <link rel="manifest" href="/ICS20-Unit-5-03-JS/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" /> 
@@ -20,14 +20,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>Integer identificator</title>
+  <title>Age identificator</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Integer identificator</span>
+          <span class="mdl-layout-title">Age identificator</span>
         </div>
       </header>
       <main class="mdl-layout__content">
