--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </label>
         <br>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="0">
-          <input class="mdl-radio__button" id="0" name="age" type="radio" value="0" checked = true>
+          <input class="mdl-radio__button" id="0" name="age" type="radio" value="0" checked = "true">
           <span class="mdl-radio__label">Younger then 5</span>
         </label>
           <p></p>
